--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "one-light-syntax": "file:packages/one-light-syntax",
     "one-light-ui": "file:packages/one-light-ui",
     "open-on-github": "https://www.atom.io/api/packages/open-on-github/versions/1.3.2/tarball",
+    "osc-js": "^2.1.0",
     "package-generator": "https://www.atom.io/api/packages/package-generator/versions/1.3.0/tarball",
     "pathwatcher": "8.1.0",
     "postcss": "5.2.4",
